fix navbar collapse, it seems

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -250,7 +250,7 @@ section.success {
 }
 
 .carousel .portfolio-item {
-	min-height: 280px;
+	min-height: 200px;
 	margin: 0 auto;
 }
 
